--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -1,374 +1,85 @@
 @import '../../utils/constants.scss';
-$text-color: #cfcde7;
 
-.nav-bar-container {
-  overflow-x: hidden;
-  background-color: #e4e2f5;
-  min-height: 100vh;
+.navbar-items-container {
   display: flex;
-  position: relative;
-}
-
-ul {
-  list-style: none;
-}
-
-nav {
-  position: sticky;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  background-color: $primarycolor;
-  width: 16rem;
-  padding: 1.8rem 0.85rem;
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  transition: width 0.5s ease-in-out;
-}
-
-nav::before {
-  content: '';
-  position: absolute;
-  width: 2rem;
+  align-items: center;
+  position: fixed;
+  right: -90px;
+  width: 90px;
   height: 100%;
-  top: 0;
-  left: 100%;
-}
 
-main {
-  flex: 1;
-  padding: 2rem;
-  color: #1f2027;
-  display: flex;
-  flex-direction: column;
-}
+  .navbar-items {
+    width: 100%;
+    height: 95%;
+    background-color: $primarycolor;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .navbar-logo {
+      width: 85px;
+      padding: 20px;
+      fill: $whiteColor;
+      cursor: pointer;
+      transition: 0.8s;
+      transform: scale(1, 1);
+      &:hover {
+        transform: scale(1.1, 1.1);
+      }
+      &:active {
+        transform: scale(0.5, 0.5);
+      }
+    }
+    .nav-link-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      cursor: pointer;
+      margin-bottom: 30px;
 
-main h1 {
-  margin-bottom: 1rem;
-}
+      &:hover .nav-icon {
+        background-color: $secondcolor;
+        border-radius: 10px;
+        transition: 0.8s;
+      }
+      &:hover .nav-link {
+        transform: scale(0.9, 0.9);
+        color: $whiteColor;
+      }
+      .nav-icon {
+        width: 50px;
+        padding: 9px;
+      }
+      .nav-link {
+        font-size: 15px;
+        font-weight: bold;
+        transform: scale(0.5, 0.5);
+        transition: 0.8s;
+        color: rgba(255, 255, 255, 0);
+      }
+    }
 
-main .copyright {
-  margin-top: auto;
-  font-size: 0.9rem;
-}
+    .nav-menu {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
 
-main .copyright span {
-  color: $primarycolor;
-  font-weight: 500;
-  cursor: pointer;
-}
-
-.sidebar-top {
-  position: relative;
-  display: flex;
-  align-items: center;
-}
-
-.sidebar-top .logo {
-  width: 2.1rem;
-  margin: 0 0.8rem;
-}
-
-.sidebar-top h3 {
-  padding-left: 0.5rem;
-  font-weight: 600;
-  font-size: 1.15rem;
-}
-
-.shrink-btn {
-  position: absolute;
-  top: 50%;
-  height: 27px;
-  padding: 0 0.3rem;
-  background-color: $primarycolor;
-  border-radius: 6px;
-  cursor: pointer;
-  box-shadow: 0 3px 10px -3px rgba(70, 46, 118, 0.3);
-  right: -2.65rem;
-  transform: translateY(-50%) translateX(-8px);
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.3s;
-}
-
-.shrink-btn i {
-  line-height: 27px;
-  transition: 0.3s;
-}
-
-.shrink-btn:hover {
-  background-color: $darkGreen;
-}
-
-nav:hover .shrink-btn,
-.shrink-btn.hovered {
-  transform: translateY(-50%) translateX(0px);
-  opacity: 1;
-  pointer-events: all;
-}
-
-.search {
-  min-height: 2.7rem;
-  background-color: $secondcolor;
-  margin: 2rem 0.5rem 1.7rem;
-  display: grid;
-  grid-template-columns: 2.7rem 1fr;
-  align-items: center;
-  text-align: center;
-  border-radius: 50px;
-  cursor: pointer;
-}
-
-.search input {
-  height: 100%;
-  border: none;
-  background: none;
-  outline: none;
-  color: #fff;
-  caret-color: #fff;
-  font-family: inherit;
-}
-
-.search input::placeholder {
-  color: $text-color;
-}
-
-.sidebar-links ul {
-  position: relative;
-}
-
-.sidebar-links li {
-  position: relative;
-  padding: 2.5px 0;
-}
-
-.sidebar-links a {
-  color: $text-color;
-  font-weight: 400;
-  font-size: 0.9rem;
-  display: flex;
-  align-items: center;
-  height: 53px;
-}
-
-.icon {
-  font-size: 1.3rem;
-  text-align: center;
-  min-width: 3.7rem;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-}
-
-.icon i {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-  transition: 0.3s;
-}
-
-.icon i:last-child {
-  opacity: 0;
-  color: #fff;
-}
-
-.sidebar-links a.active,
-.sidebar-links a:hover {
-  color: #fff;
-}
-
-.sidebar-links a .link {
-  transition: opacity 0.3s 0.2s, color 0.3s;
-}
-
-.sidebar-links a.active i:first-child {
-  opacity: 0;
-}
-
-.sidebar-links a.active i:last-child {
-  opacity: 1;
-}
-
-.active-tab {
-  width: 100%;
-  height: 53px;
-  background-color: $darkGreen;
-  border-radius: 10px;
-  position: absolute;
-  top: 2.5px;
-  left: 0;
-  transition: top 0.3s;
-}
-
-.sidebar-links h4 {
-  position: relative;
-  font-size: 0.8rem;
-  text-transform: uppercase;
-  font-weight: 600;
-  padding: 0 0.8rem;
-  color: $text-color;
-  letter-spacing: 0.5px;
-  height: 45px;
-  line-height: 45px;
-  transition: opacity 0.3s 0.2s, height 0.5s 0s;
-}
-
-.sidebar-footer {
-  position: relative;
-  margin-top: auto;
-}
-
-.account {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.3rem;
-  color: $text-color;
-  height: 53px;
-  width: 3.7rem;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.3s 0s, color 0.3s 0s;
-}
-
-.account:hover {
-  color: #fff;
-}
-
-.admin-user {
-  display: flex;
-  align-items: center;
-}
-
-.admin-profile {
-  white-space: nowrap;
-  max-width: 100%;
-  transition: opacity 0.3s 0.2s, max-width 0.7s 0s ease-in-out;
-  display: flex;
-  align-items: center;
-  flex: 1;
-  overflow: hidden;
-}
-
-.admin-user img {
-  width: 2.9rem;
-  border-radius: 50%;
-  margin: 0 0.4rem;
-}
-
-.admin-info {
-  padding-left: 0.3rem;
-}
-
-.admin-info h3 {
-  font-weight: 500;
-  font-size: 1rem;
-  line-height: 1;
-}
-
-.admin-info h5 {
-  font-weight: 400;
-  font-size: 0.75rem;
-  color: $text-color;
-  margin-top: 0.3rem;
-  line-height: 1;
-}
-
-.log-out {
-  display: flex;
-  height: 40px;
-  min-width: 2.4rem;
-  background-color: $darkGreen;
-  color: $text-color;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.15rem;
-  border-radius: 10px;
-  margin: 0 0.65rem;
-  transition: color 0.3s;
-}
-
-.log-out:hover {
-  color: #fff;
-}
-
-.tooltip {
-  background-color: $primarycolor;
-  position: absolute;
-  right: -1.2rem;
-  top: 0;
-  transform: translateX(100%) translateY(-50%);
-  padding: 0 0.8rem;
-  font-size: 0.85rem;
-  display: none;
-  grid-template-rows: 1fr;
-  grid-template-columns: 1fr;
-  height: 30px;
-  align-items: center;
-  border-radius: 7px;
-  box-shadow: 0 3px 10px -3px rgba(70, 46, 118, 0.3);
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.3s;
-  text-align: center;
-  white-space: nowrap;
-}
-
-.tooltip span {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-  opacity: 0;
-  transition: 0.3s;
-}
-
-.tooltip span.show {
-  opacity: 1;
-}
-
-.tooltip-element:hover ~ .tooltip {
-  opacity: 1;
-  pointer-events: all;
-}
-
-/* When the menu shrinks */
-
-.hide {
-  transition: opacity 0.3s 0.2s;
-}
-
-.nav-bar-container.shrink nav {
-  width: 5.4rem;
-}
-
-.nav-bar-container.shrink .hide {
-  opacity: 0;
-  pointer-events: none;
-  transition-delay: 0s;
-}
-
-.nav-bar-container.shrink .shrink-btn i {
-  transform: rotate(-180deg);
-}
-
-.nav-bar-container.shrink .sidebar-links h4 {
-  height: 10px;
-}
-
-.nav-bar-container.shrink .account {
-  opacity: 1;
-  pointer-events: all;
-  transition: opacity 0.3s 0.3s, color 0.3s 0s;
-}
-
-.nav-bar-container.shrink .admin-profile {
-  max-width: 0;
-  transition: opacity 0.3s 0s, max-width 0.7s 0s ease-in-out;
-}
-
-.nav-bar-container.shrink .tooltip {
-  display: grid;
-}
-
-ul {
-  padding-left: 0;
+      .active {
+        & .nav-icon {
+          background-color: $secondcolor;
+          border-radius: 10px;
+          transition: 0.8s;
+        }
+        & .nav-link {
+          font-size: 15px;
+          font-weight: bold;
+          transform: scale(0.9, 0.9);
+          transition: 0.8s;
+          color: #fff;
+        }
+      }
+    }
+  }
 }
